Translate CloudFlare subdomain instructions to Chinese

--- a/add.html
+++ b/add.html
@@ -1,9 +1,9 @@
 <!--CloudFlare API Test -->
 <center>
-    <h1>CloudFlare Add Sub domain</h1>
-    <p>Add the subdomain to CloudFlare and activate it.<br>
-    This will prevent DDoS attacks and enable free SSL that does not require renewal.<br>
-    This SSL uses Flexible mode, so it may not be suitable for WordPress sites.</p>
+    <h1>CloudFlare添加子域</h1>
+    <p>将子域添加到CloudFlare并激活它。<br>
+    这将防止DDoS攻击，并启用不需要续订的免费SSL。<br>
+    此SSL使用灵活模式，因此可能不适合WordPress网站。</p>
     <form action="add_subdomain.php" method="post">
         <h5>
             <label for="subdomain">Sub domain:</label>
